# Deep_CNN_Classifier

./: .gitignore  README.md  params.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
research/: mlflow_example.py  st_02.ipynb  st_03.ipynb  st_04.ipynb  st_05.ipynb  trials.ipynb
src/deepClassifier/: __init__.py
src/deepClassifier/components/: __init__.py  data_ingestion.py  evaluation.py  prepare_base_model.py  prepare_callback.py  training.py
src/deepClassifier/config/: configuration.py
src/deepClassifier/constant/: __init__.py
src/deepClassifier/entity/: __init__.py  config_entiy.py
src/deepClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_training.py  stage_04_evaluation.py
tests/data/: demo.yaml
tests/integration/: test_data_ingestion.py
tests/unit/: test_data_ingestion.py  test_utils.py
