## this file contains meta data of package
[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

## fixed requirements which our package depends on
[options]
install_requires = 
    ensure==1.0.2
python_requires = >=3.7

## extra packages for example for testing
[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

## where my package is, py.typed used to ignore erros in imported packages like tensorflow
[options.package_data]
deepClassifier = py.typed

## flake 8 helps in following code standard
[flake8]
max-line-length = 160
exclude = __init__.py